--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Melonmunchers</title>
+    <title>Madkalorier</title>
     <script src="app.js" defer></script>
     <style>
     body {
